[gd_scene load_steps=3 format=3 uid="uid://br6duejkejpqf"]

[ext_resource type="Script" path="res://addons/cardengine/ui/dialogs/edit_database_dialog/edit_database_dialog.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c2gf14eexlk2s" path="res://addons/cardengine/ui/dialogs/duplicate_card_dialog/duplicate_card_dialog.tscn" id="2"]

[node name="EditDatabaseDialog" type="Window"]
script = ExtResource("1")

[node name="MainLayout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="FiltersLayout" type="GridContainer" parent="MainLayout"]
layout_mode = 2
columns = 2

[node name="ValFilterLbl" type="Label" parent="MainLayout/FiltersLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Filter by value:"

[node name="TxtFilterLbl" type="Label" parent="MainLayout/FiltersLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Filter by text:"

[node name="ValFilter" type="OptionButton" parent="MainLayout/FiltersLayout"]
layout_mode = 2
tooltip_text = "The value used as filter."

[node name="TxtFilter" type="OptionButton" parent="MainLayout/FiltersLayout"]
layout_mode = 2
tooltip_text = "The text used as filter."

[node name="CompLayout" type="HBoxContainer" parent="MainLayout/FiltersLayout"]
layout_mode = 2

[node name="CompOp" type="OptionButton" parent="MainLayout/FiltersLayout/CompLayout"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The operator used for value filtering."

[node name="CompVal" type="SpinBox" parent="MainLayout/FiltersLayout/CompLayout"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The number used for value filtering."
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="ContainsFilter" type="LineEdit" parent="MainLayout/FiltersLayout"]
layout_mode = 2
tooltip_text = "The string used for text filtering."

[node name="CategFilterScroll" type="ScrollContainer" parent="MainLayout"]
layout_mode = 2

[node name="CategFilterList" type="HBoxContainer" parent="MainLayout/CategFilterScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardsLayout" type="GridContainer" parent="MainLayout"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ListLbl" type="Label" parent="MainLayout/CardsLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Card List"

[node name="DetailsLbl" type="Label" parent="MainLayout/CardsLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Card Details"

[node name="CardList" type="ItemList" parent="MainLayout/CardsLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Single-click to select."

[node name="DetailsLayout" type="VBoxContainer" parent="MainLayout/CardsLayout"]
layout_mode = 2

[node name="DetailsList" type="ItemList" parent="MainLayout/CardsLayout/DetailsLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Just display the data  of the selected card."

[node name="ToolsLayout" type="HBoxContainer" parent="MainLayout/CardsLayout/DetailsLayout"]
layout_mode = 2
alignment = 1

[node name="DeleteBtn" type="Button" parent="MainLayout/CardsLayout/DetailsLayout/ToolsLayout"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
tooltip_text = "Removes a card from the database. Not reversible."
disabled = true
text = "Delete"

[node name="Spacer" type="Control" parent="MainLayout/CardsLayout/DetailsLayout/ToolsLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DuplicateBtn" type="Button" parent="MainLayout/CardsLayout/DetailsLayout/ToolsLayout"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
tooltip_text = "Opens the card duplication dialog."
disabled = true
text = "Duplicate"

[node name="EditBtn" type="Button" parent="MainLayout/CardsLayout/DetailsLayout/ToolsLayout"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
tooltip_text = "Shows the card in the Cards tab for edit."
disabled = true
text = "Edit"

[node name="Spacer" type="Control" parent="MainLayout"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ButtonLayout" type="HBoxContainer" parent="MainLayout"]
layout_mode = 2
alignment = 1

[node name="DoneBtn" type="Button" parent="MainLayout/ButtonLayout"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
tooltip_text = "Closes this dialog."
text = "Done"

[node name="DuplicateCardDialog" parent="." instance=ExtResource("2")]

[connection signal="about_to_popup" from="." to="." method="_on_EditDatabaseDialog_about_to_show"]
[connection signal="item_selected" from="MainLayout/FiltersLayout/ValFilter" to="." method="_on_ValFilter_item_selected"]
[connection signal="item_selected" from="MainLayout/FiltersLayout/TxtFilter" to="." method="_on_TxtFilter_item_selected"]
[connection signal="item_selected" from="MainLayout/FiltersLayout/CompLayout/CompOp" to="." method="_on_CompOp_item_selected"]
[connection signal="value_changed" from="MainLayout/FiltersLayout/CompLayout/CompVal" to="." method="_on_CompVal_value_changed"]
[connection signal="text_changed" from="MainLayout/FiltersLayout/ContainsFilter" to="." method="_on_ContainsFilter_text_changed"]
[connection signal="item_selected" from="MainLayout/CardsLayout/CardList" to="." method="_on_CardList_item_selected"]
[connection signal="pressed" from="MainLayout/CardsLayout/DetailsLayout/ToolsLayout/DeleteBtn" to="." method="_on_DeleteBtn_pressed"]
[connection signal="pressed" from="MainLayout/CardsLayout/DetailsLayout/ToolsLayout/DuplicateBtn" to="." method="_on_DuplicateBtn_pressed"]
[connection signal="pressed" from="MainLayout/CardsLayout/DetailsLayout/ToolsLayout/EditBtn" to="." method="_on_EditBtn_pressed"]
[connection signal="pressed" from="MainLayout/ButtonLayout/DoneBtn" to="." method="_on_DoneBtn_pressed"]
